add meta description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Meta regularly publishes reports to give our community visibility into community standards enforcement, government requests and internet disruptions">
 
-  <title>Facebook Meta Services</title>
+  <title>Transparency Center</title>
 
   <meta name="og:image" content="https://static.xx.fbcdn.net/rsrc.php/v3/yc/r/s_dzh-nO-ax.png">
   <link rel="shortcut icon" href="https://static.xx.fbcdn.net/rsrc.php/v3/yd/r/4KnVq6qfLqy.png" />
