add meta og:description

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Transparency Center</title>
 
   <meta name="og:image" content="https://static.xx.fbcdn.net/rsrc.php/v3/yc/r/s_dzh-nO-ax.png">
+  <meta name="og:description" content="Meta regularly publishes reports to give our community visibility into community standards enforcement, government requests and internet disruptions">
   <link rel="shortcut icon" href="https://static.xx.fbcdn.net/rsrc.php/v3/yd/r/4KnVq6qfLqy.png" />
 </head>
 
