--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       var links = {
         "randomcode1": "https://example1.com",
         "randomcode2": "https://example2.com",
+		"randomcode3": "https://example3.com",
       };
 
       if (!is_bot && is_mobile) {
